made some changes
will look further into making better changes when I get home

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <title>Restaurang</title>
 </head>
 <body>
-    <nav class="navbar-brand">
+    <nav class="navbar navbar-expand-lg bg-light">
     
-<a href="">Meny</a>
-<a href="">Galleri</a>
-<a href="">Om oss</a>
-<a href="">Kontakta oss</a>
+<a href="" class="navbar-brand" >Meny</a>
+<a href="" class="navbar-brand" >Galleri</a>
+<a href="" class="navbar-brand" >Om oss</a>
+<a href="" class="navbar-brand" >Kontakta oss</a>
     </nav>
     <div class="main-area">
         <div class="images">
@@ -23,9 +23,17 @@
         </div>
         <div class="menu">
  <h3>Garlic naan</h3>
+ <p>Nybakat tandoori naan med färsk vitlök.</p>
+ <h5>30 kr</h5>
  <h3>Devil chicken</h3>
+ <p>Devil Chicken</p>
+ <h5>149 kr</h5>
  <h3>Butter chicken</h3>
+ <p>Marinated chicken pieces grilled in a clay oven. Served in a creamy sauce with nuts. Served With Basmati Rice.</p>
+ <h5>149 kr</h5>
  <h3>Butter shrimp</h3>
+ <p>Marinated grilled Shrimp in creamy sauce with nuts. Served with rice.</p>
+ <h5>169 kr</h5>
     </div>
     <footer>
 <h2>+46735147397</h2>
