--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
     <title>Restaurang</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-    
-<a href="" class="navbar-brand" >Meny</a>
-<a href="" class="navbar-brand" >Galleri</a>
-<a href="" class="navbar-brand" >Om oss</a>
-<a href="" class="navbar-brand" >Kontakta oss</a>
+    <nav class="navbar navbar-expand-lg bg-light" >
+        <img src="./images/cropped-rgb-1.png" alt="logo" class="navbar-brand" height="50px">
+ <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<li class="nav-item"><a href="" class="nav-link">Meny</a></li>
+<li class="nav-item"><a href="" class="nav-link">Galleri</a></li>
+<li class="nav-item"><a href="" class="nav-link">Om oss</a></li>
+<li class="nav-item"><a href="" class="nav-link">Kontakta oss</a></li>
+ </ul>    
+
+
+
+
     </nav>
     <div class="main-area">
         <div class="images">
