--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>Restaurang</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light" >
-        <img src="./images/cropped-rgb-1.png" alt="logo" class="navbar-brand" height="50px">
+    <nav class="navbar navbar-expand-lg bg-dark" >
+        <a href="" class="navbar-brand">
+                    <img src="./images/cropped-rgb-1.png" alt="logo" height="30px" width="150px">
+        </a>
  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 <li class="nav-item"><a href="" class="nav-link">Meny</a></li>
 <li class="nav-item"><a href="" class="nav-link">Galleri</a></li>
@@ -41,10 +43,10 @@
  <p>Marinated grilled Shrimp in creamy sauce with nuts. Served with rice.</p>
  <h5>169 kr</h5>
     </div>
-    <footer>
-<h2>+46735147397</h2>
-<h2>Bruksgatan 5 Kävlinge, 244 30 Sweden</h2>
-<a href="https://www.fenugreek.se/">Fenugreek</a>
+    <footer >
+        <h2 class="info">+46735147397</h2>
+        <h2 class="info">Bruksgatan 5 Kävlinge, 244 30 Sweden</h2>
+        <a href="https://www.fenugreek.se/" class="info">Fenugreek</a>
     </footer>
 </body>
 </html>
